2007-09-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/ReportBase/_ReportDialog.py: Cleanup.
	* src/glade/paper_settings.glade: Remove frames.

2007-09-15  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/ReportBase/__init__.py:
	* src/ReportBase/_MenuOptions.py:
	* src/plugins/Calendar.py:
	Bring the calendar report up to date with the changes in the 3.0 branch.
	Issue #0001170.

2007-09-15  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/ReportBase/_ReportDialog.py:
	* src/glade/paper_settings.glade:
	Add paper margins to report dialog. (Only GUI is implemented for
	feedback.)
 
2007-09-15  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/ReportBase/_ReportDialog.py (parse_paper_frame): Fix paper size
	default value in case of exception.

2007-09-14  Benny Malengier  <benny.malengier@gramps-project.org>
	* TODO: Update TODO file

2007-09-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/PdfDoc.py: Added.

2007-09-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py:
	* src/docgen/CairoDoc.py:
	Separate Cairo based document generation to be used with other outputs.

2007-09-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomTokens.py: fix typo
	* src/GrampsDbUtils/_GedcomLex.py: fix typo

2007-09-13  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/plugins/lineage.py: Final touches, loop detection

2007-09-12  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: cleanup and documentation
	* src/DataViews/_RepositoryView.py: cleanup and documentation
	* src/DataViews/_SourceView.py: cleanup and documentation
	* src/DataViews/_EventView.py: cleanup and documentation
	* src/DataViews/_FamilyList.py: cleanup and documentation
	* src/DataViews/_PedigreeView.py: cleanup and documentation
	* src/DataViews/_PlaceView.py: cleanup and documentation
	* src/DataViews/_NoteView.py: cleanup and documentation